tests/invalid_loop/test_uv_resolver.php
<?php
$class = 'UVResolver';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$resolver = new UVResolver(new stdClass());
